# game_of_life

./: .gitignore  CMakeLists.txt  GameBoard.cpp  GameBoard.h  README.md  game_of_life.sln  game_of_life.vcxproj  game_of_life.vcxproj.filters  start.cpp  start_table.txt
src/: Boundary.cpp  Boundary.h  Cell.cpp  Cell.h  GameBoard.cpp  GameBoard.h  LiveRules.cpp  LiveRules.h  Neighbor.cpp  Neighbor.h  main.cpp
